--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
-    "eslint-config-next": "^16.0.8",
+    "eslint-config-next": "14.2.16",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "tw-animate-css": "^1.4.0",
